--- a/.editorconfig
+++ b/.editorconfig
@@ -6,17 +6,19 @@ root = true
 charset = utf-8
 end_of_line = lf
 indent_size = 2
-tab_width = 4
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
 # Markdown
 [*.md]
-indent_size = 4
+trim_trailing_whitespace = false
 
 # JSON-Files
 [*.{json,jsonc}]
+insert_final_newline = false
+
+[*.{yml,yaml}]
 insert_final_newline = false
 
 # Python
