--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,7 +38,7 @@ copyright: Copyright &copy; 2022 Matthias Wild
 # Configuration
 theme:
   name: null
-  custom_dir: !ENV [THEME_DIR, 'mkdocs-material/material']
+  custom_dir: 'mkdocs-material/material'
 
   # 404 page
   static_templates:
@@ -55,12 +55,12 @@ theme:
     # - content.tabs.link
     - content.tooltips
     # - header.autohide
-    # - navigation.expand
+    - navigation.expand
     - navigation.indexes
     # - navigation.instant
     - navigation.sections
     - navigation.tabs
-    # - navigation.tabs.sticky
+    - navigation.tabs.sticky
     - navigation.top
     - navigation.tracking
     - search.highlight
