--- a/azure-pipelines/experimental.yml
+++ b/azure-pipelines/experimental.yml
@@ -45,7 +45,7 @@ stages:
         steps:
           - template: jobs/steps/checkout_submodules.yml
             parameters:
-              submodule: django_webapp
+              submodule: webapp
               # checkoutSelf: false
               # recursive: false
               # debug: true
@@ -69,7 +69,7 @@ stages:
         steps:
           - template: jobs/steps/checkout_submodules.yml
             parameters:
-              submodule: django_webapp
+              submodule: webapp
 
           - template: jobs/steps/python_django_test_experimental.yml
             parameters:
