--- a/azure-pipelines/validate_pr.yml
+++ b/azure-pipelines/validate_pr.yml
@@ -46,7 +46,7 @@ stages:
         steps:
           - template: jobs/steps/checkout_submodules.yml
             parameters:
-              submodule: django_webapp
+              submodule: webapp
 
           - template: jobs/steps/get_appinsights_con_str.yml
             parameters:
