--- a/azure-pipelines/jobs/steps/python_django_export_projectroot.yml
+++ b/azure-pipelines/jobs/steps/python_django_export_projectroot.yml
@@ -8,7 +8,7 @@ parameters:
 steps:
   - template: checkout_submodules.yml
     parameters:
-      submodule: webapp
+      submodule: src/webapp
 
   - task: UsePythonVersion@0
     displayName: Use Python version ${{ parameters.PYTHON_VERSION }}
