quote submodule path

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,7 +78,7 @@ stages:
         steps:
           - template: azure-pipelines/jobs/steps/checkout_submodules.yml
             parameters:
-              submodule: webapp
+              submodule: 'src/webapp'
           - template: azure-pipelines/jobs/steps/python_django_test.yml
             parameters:
               PYTHON_VERSIONS:
