--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,6 @@
-[submodule "django_webapp"]
-	path = django_webapp
-	url = https://github.com/Mauwii/msdocs-python-django-webapp-quickstart.git
-  branch = main
 [submodule "mkdocs-material"]
-	path = mkdocs-material
+	path = src/mkdocs-material
 	url = https://github.com/Mauwii/mkdocs-material.git
-	branch = master
+[submodule "webapp"]
+	path = src/webapp
+	url = https://github.com/Mauwii/msdocs-python-django-webapp-quickstart.git
