--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -99,12 +99,12 @@ stages:
     dependsOn: WebApp
     condition: in(dependencies.WebApp.result, 'Succeeded')
     jobs:
-      - ${{ if eq(variables.isMain, 'False') }}:
-          - job: buildMkDocs
-            displayName: Build MkDocs-Material
-            dependsOn:
-            steps:
-              - template: azure-pipelines/jobs/steps/build_mkdocs.yml
+      - job: buildMkDocs
+        displayName: Build MkDocs-Material
+        dependsOn:
+        condition: eq(variables.isMain, 'False')
+        steps:
+          - template: azure-pipelines/jobs/steps/build_mkdocs.yml
       - ${{ if eq(variables.isMain, 'True') }}:
           - job: deployMkDocs
             displayName: Deploy MkDocs-Material
